# musicom

./: Cargo.toml  README.md  dev_env.bash
migrations/: V1__initial.sql  V3__track_fields.sql  V4__path_index.sql
migrations/2020-11-25-220217_add_library_paths/: down.sql  up.sql
migrations/2020-11-25-220217_add_library_paths/src/: schema.rs
migrations/2020-11-27-195210_track_fields/: down.sql
resources/: .gitattributes  test.webm
src/: main.rs  player.rs  schema.rs  ui.rs  util.rs
src/player/: gstreamer.rs  mod.rs  now_playing.rs  player_hdl.rs  queue.rs  util.rs
src/ui/: file_browser.rs  library_view.rs  main_view.rs  player_view.rs  queue_view.rs
