[package]
name = "musicom"
version = "0.1.0"
authors = ["Nate Jones <jonesnl@umich.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
cursive = "0.15"
gstreamer = "0.16.2"
gstreamer-pbutils = "0.16.2"
log = "0.4.11"
url = "2.1.1"
lazy_static = "1.4.0"
mime_guess = "2.0.3"
rusqlite = "0.24.1"
directories = "3.0"
taglib = "1.0.0"
refinery = { version = "0.4", features = ["rusqlite"]}
